# obs-auto-hide-plugin

./: .gitignore  CMakeLists.local.txt  CMakeLists.original.txt  CMakeLists.txt  LICENSE  README.md  cmakelog.txt  tracked_files.txt
.github/workflows/: build.yml
data/locale/: pt-BR.ini
scripts/: build-macos.sh  build-windows.bat  install-macos.sh  install-windows.bat
src/: auto-hide-dock.cpp  auto-hide-dock.hpp  holyrics-client.cpp  holyrics-client.hpp  plugin-config.cpp  plugin-config.hpp  plugin-main.cpp  presentation-client.hpp  propresent-client.cpp  propresent-client.hpp  scene-controller.cpp  scene-controller.hpp  settings-dialog.cpp  settings-dialog.hpp
